--- a/src/screens/AnalizaMain.css
+++ b/src/screens/AnalizaMain.css
@@ -19,5 +19,32 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+}
 
+sup{
+    vertical-align: baseline;
+    position: relative;
+    top: -0.4em;
+}
+
+sub{
+    vertical-align: baseline;
+    position: relative;
+    top: 0.3em;
+}
+
+.verySmall{
+    font-size: 1px;
+    margin-bottom: 15px;
+}
+
+.centerVertical{
+    align-items: center;
+}
+
+.dwumianOgol{
+    border: 1px solid black;
+    background: black;
+    padding-right: 14px;
+    padding-left: 14px;
 }
