--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -7,7 +7,7 @@
     width: 100%;
     flex-flow: row-reverse wrap;
     top: 0;
-    z-index: 999;
+    z-index: 10;
     elevation: above;
     -webkit-box-shadow: 0px 11px 10px -3px rgba(0,0,0,0.65);
     box-shadow: 0px 11px 10px -3px rgba(0,0,0,0.65);
@@ -22,7 +22,7 @@
     max-width: 1500px;
 }
 
-.navbar-logo {
+/*.navbar-logo {
     color: #fff;
     justify-self: left;
     position: absolute;
@@ -37,7 +37,7 @@
     user-select: none;
     border:0px;
     outline:0px;
-}
+}*/
 
 .fa-typo3 {
     margin-left: 0.5rem;
